# django-oauth-guard

./: .gitignore  ADVANCED.md  LICENSE  README.md  pyproject.toml  runtests.py  setup.cfg  setup.py  test_import.py  tox.ini
.github/workflows/: publish.yml  test.yml  tests.yml
django_oauth_guard/: middleware.py  signals.py
django_oauth_guard/examples/: __init__.py  custom_handlers.py  custom_provider.py
django_oauth_guard/tests/: test_compatibility.py  test_config.py  test_functional.py  test_future_features.py  test_integration.py  test_middleware.py  test_security.py
tests/: settings.py  urls.py
