[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "django-oauth-guard"
version = "0.1.0"
description = "Enhanced security middleware for Django applications using OAuth authentication"
readme = "README.md"
authors = [
    {name = "Pescheck"}
]
license = "MIT"
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.0",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Security",
]
dependencies = [
    "Django>=4.2",
    "django-allauth>=0.40.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-django>=4.5.0",
    "pytest-cov>=3.0.0",
    "ruff>=0.3.0",
    "tox>=4.0.0",
]
test = [
    "pytest>=7.0.0",
    "pytest-django>=4.5.0",
    "pytest-cov>=3.0.0",
    "tox>=4.0.0",
]

[project.urls]
Homepage = "https://github.com/pescheck/django-oauth-guard"
Issues = "https://github.com/pescheck/django-oauth-guard/issues"

[tool.ruff]
# Basic configuration
line-length = 88
target-version = "py39"
extend-exclude = [
    ".git",
    ".tox",
    ".venv",
    "build",
    "dist",
]

[tool.ruff.lint]
select = ["E", "F", "I"]  # Errors, PyFlakes, isort
ignore = ["E203", "E501"]  # Whitespace before ':', line length

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "tests.settings"
python_files = "test_*.py"
testpaths = ["django_oauth_guard/tests"]