[metadata]
name = django-oauth-guard
version = attr: django_oauth_guard.__version__
description = Enhanced security middleware for Django applications using OAuth authentication
long_description = file: README.md
long_description_content_type = text/markdown
author = 
author_email = 
url = https://github.com/django-oauth-guard
classifiers =
    Development Status :: 4 - Beta
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 2.2
    Framework :: Django :: 3.0
    Framework :: Django :: 3.1
    Framework :: Django :: 3.2
    Framework :: Django :: 4.0
    Framework :: Django :: 4.1
    Framework :: Django :: 4.2
    Framework :: Django :: 5.0
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Internet :: WWW/HTTP
    Topic :: Security

[options]
packages = find:
python_requires = >=3.9
install_requires =
    Django>=2.2
    django-allauth>=0.40.0

[options.packages.find]
exclude =
    tests

[bdist_wheel]
universal = 1

[flake8]
max-line-length = 88
extend-ignore = E203, W503
exclude = .git,__pycache__,docs/conf.py,old,build,dist

[coverage:run]
source = django_oauth_guard
omit = */tests/*,*/migrations/*,*/example/*

[coverage:report]
exclude_lines =
    pragma: no cover
    def __repr__
    raise NotImplementedError
    if __name__ == .__main__.:
    pass
    raise ImportError

[tool:pytest]
DJANGO_SETTINGS_MODULE = tests.settings
python_files = test_*.py
testpaths = django_oauth_guard/tests
filterwarnings =
    ignore::DeprecationWarning
    ignore::PendingDeprecationWarning