[metadata]
name = django-oauth-guard
version = attr: django_oauth_guard.__version__
description = Enhanced security middleware for Django applications using OAuth authentication
long_description = file: README.md
long_description_content_type = text/markdown
author = Pescheck
author_email = pescheck@example.com
url = https://github.com/pescheck/django-oauth-guard
classifiers =
    Development Status :: 4 - Beta
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 4.2
    Framework :: Django :: 5.0
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Internet :: WWW/HTTP
    Topic :: Security

[options]
packages = find:
python_requires = >=3.9
install_requires =
    Django>=4.2
    django-allauth>=0.40.0

[options.packages.find]
exclude =
    tests


# Flake8 configuration removed - now using ruff

[coverage:run]
source = django_oauth_guard
omit = */tests/*,*/migrations/*,*/example/*

[coverage:report]
exclude_lines =
    pragma: no cover
    def __repr__
    raise NotImplementedError
    if __name__ == .__main__.:
    pass
    raise ImportError

[tool:pytest]
DJANGO_SETTINGS_MODULE = tests.settings
python_files = test_*.py
testpaths = django_oauth_guard/tests
filterwarnings =
    ignore::DeprecationWarning
    ignore::PendingDeprecationWarning